Fixed updated URI validation